--- a/.github/workflows/main_sreeahk-webapp1.yml
+++ b/.github/workflows/main_sreeahk-webapp1.yml
@@ -58,6 +58,9 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
+      - name: Start flask developement sever
+        run: flask run
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
