--- a/.github/workflows/main_sreeahk-webapp1.yml
+++ b/.github/workflows/main_sreeahk-webapp1.yml
@@ -58,6 +58,8 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
+      - name: Start development serve
+        run: python -m flask run
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
