--- a/.github/workflows/main_sreeahk-webapp1.yml
+++ b/.github/workflows/main_sreeahk-webapp1.yml
@@ -41,6 +41,8 @@ jobs:
           path: |
             release.zip
             !venv/
+      - name: deploy python server
+        run:  python app.py
 
   deploy:
     runs-on: ubuntu-latest
